Fixed CSS and JS path

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
     <title>To Do List</title>
 </head>
 <body>
@@ -46,6 +46,7 @@
         <h1 id="opaque">Welcome</h1>
     </div>
     <audio src="/audio/siren-alert-96052.mp3" id="alertSound" preload="auto"></audio>
-    <script src="/script.js"></script>
+    
+    <script src="script.js"></script>
 </body>
 </html>
