Fixed file paths for CSS and JS

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
         <link rel="stylesheet" href="style.css">
     <title>To Do List</title>
 </head>
 <body>
     <div id="app">
         <div class="line"></div>
-        <h1 id="title"><img id="logo" src="/images/logo.png" alt="Todo logo">To-Do List App</h1>
+        <h1 id="title"><img id="logo" src="images/logo.png" alt="Todo logo">To-Do List App</h1>
         <div id="dateAndTimeDisplay">
             <h4 id="dateHeader"></h4>
             <h4 id="timeHeader"></h4>
@@ -45,8 +45,8 @@
         </div>
         <h1 id="opaque">Welcome</h1>
     </div>
-    <audio src="/audio/siren-alert-96052.mp3" id="alertSound" preload="auto"></audio>
-    
+    <audio src="audio/siren-alert-96052.mp3" id="alertSound" preload="auto"></audio>
+
     <script src="script.js"></script>
 </body>
 </html>
