Modified JS and HTML

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="app">
         <div class="line"></div>
-        <h1 id="title"><img id="logo" src="images/logo.png" alt="Todo logo">To-Do List App</h1>
+        <h1 id="title"><img id="logo" src="images/logo.png" alt="Logo">To-Do List App</h1>
         <div id="dateAndTimeDisplay">
             <h4 id="dateHeader"></h4>
             <h4 id="timeHeader"></h4>
