--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="app">
         <div class="line"></div>
-        <h1 id="title"><img id="logo" src="images/logo.png" alt="Logo">To-Do List App</h1>
+        <h1 id="title"><img id="logo" src="logo.png" alt="Logo">To-Do List App</h1>
         <div id="dateAndTimeDisplay">
             <h4 id="dateHeader"></h4>
             <h4 id="timeHeader"></h4>
@@ -45,7 +45,7 @@
         </div>
         <h1 id="opaque">Welcome</h1>
     </div>
-    <audio src="audio/siren-alert-96052.mp3" id="alertSound" preload="auto"></audio>
+    <audio src="siren-alert-96052.mp3" id="alertSound" preload="auto"></audio>
 
     <script src="script.js"></script>
 </body>
